--- a/css/main_2.5.css
+++ b/css/main_2.5.css
@@ -159,6 +159,20 @@ html {
 	margin-left: 10px
 }
 
+.accTitle{
+	font-size: 25px;
+	margin-bottom: 10px;
+	font-family: 'Roboto:100', sans-serif!important
+}
+
+.accDesc {
+	letter-spacing: .05em;
+	margin-bottom: 10px;
+	font-family: 'Roboto:100', sans-serif!important;
+	font-size: 18px!important;
+	margin-left: 10px
+}
+
 .paragraph {
 	font-size: 20px;
 	font-family: 'Roboto:100', sans-serif!important;
@@ -514,4 +528,8 @@ box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.75);
 	.margined {
 		margin: 0!important
 	}
+
+  .workDate {
+    display: none;
+  }
 }
