--- a/css/main_2.6.css
+++ b/css/main_2.6.css
@@ -141,6 +141,7 @@ html {
 	font-size: 20px;
 	margin-bottom: 10px;
 	font-family: 'Roboto:100', sans-serif!important;
+  color: #276bf1;
 }
 
 .workDate {
