--- a/css/main_2.6.css
+++ b/css/main_2.6.css
@@ -144,6 +144,11 @@ html {
   color: #276bf1;
 }
 
+.noteLink{
+  color: #276bf1;
+  text-decoration:none;
+}
+
 .workDate {
 	color: grey!important;
 	font-size: 15px;
