--- a/css/main_2.7.css
+++ b/css/main_2.7.css
@@ -27,7 +27,8 @@ body {
 
 hr {
 	margin-top: 20px!important;
-	margin-bottom: 10px!important
+	margin-bottom: 10px!important;
+  border-color: transparent !important;
 }
 
 body,
@@ -51,6 +52,9 @@ html {
 }
 
 .headerContent {
+  -webkit-box-shadow: 0px 0px 32px 6px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 32px 6px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 32px 6px rgba(0,0,0,0.75);
 	width: 100%;
 	background-color: rgba(0, 0, 60, .5);
 	position: absolute!important;
