--- a/css/main_2.8.css
+++ b/css/main_2.8.css
@@ -38,11 +38,11 @@ html {
 }
 
 .fluid-ratio-resize {
-	max-width: 1839px;
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
-	position: relative
+	position: relative;
+  background-color: #00000f;
 }
 
 .fluid-ratio-resize:after {
