--- a/css/main_2.8.css
+++ b/css/main_2.8.css
@@ -42,7 +42,7 @@ html {
 	background-size: cover;
 	background-position: center;
 	position: relative;
-  background-color: #00000f;
+  background-color: #ffffff;
 }
 
 .fluid-ratio-resize:after {
