ng-animate debugging

--- a/css/main_2.8.css
+++ b/css/main_2.8.css
@@ -387,9 +387,14 @@ body {
 	margin: 0
 }
 
-.ng-hide {
-	transition:1s linear all;
-	opacity:0;
+.animate-leave {
+	-webkit-transition: 1s linear all; /* Chrome */
+	transition: 1s linear all;
+	opacity: 1;
+}
+
+.animate-leave.animate-leave-active {
+	opacity: 0;
 }
 
 .loader {
