--- a/css/main_2.8.css
+++ b/css/main_2.8.css
@@ -301,7 +301,8 @@ box-shadow: 0px 0px 32px 6px rgba(0,0,0,0.75);
 }
 
 .fadeIn {
-	opacity: 0!important
+	opacity: 0!important;
+	visibility:hidden;
 }
 
 .mdl-card {
