--- a/css/main_2.8-b.css
+++ b/css/main_2.8-b.css
@@ -169,6 +169,9 @@ html {
 .noteLink{
 	color: #276bf1;
 	text-decoration:none;
+	margin-left:25px;
+	box-decoration-break: clone;
+  	-webkit-box-decoration-break: clone;
 }
 
 .workDate {
@@ -187,17 +190,25 @@ html {
 }
 
 .accTitle{
-	font-size: 25px;
-	margin-bottom: 10px;
-	font-family: 'Roboto:100', sans-serif!important
+	font-size:25px;
+	margin-bottom:10px;
+	font-family:'Roboto:100',sans-serif!important
 }
 
-.accDesc {
+.blogTitle{
+	font-size:25px;
+	margin-bottom:10px;
+	font-family:'Roboto:100',sans-serif!important;
+	color: #276bf1;
+	text-decoration: none;
+}
+
+.accDesc{
 	letter-spacing: .05em;
-	margin-bottom: 10px;
-	font-family: 'Roboto:100', sans-serif!important;
-	font-size: 18px!important;
-	margin-left: 10px
+	margin-bottom:10px;
+	font-family:'Roboto:100',sans-serif!important;
+	font-size:18px!important;
+	margin-left:10px
 }
 
 .paragraph {
