--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    max-width: 700px;
-    width: 90%;
-    margin: auto;
-}
-
 #profile-img {
     width: 100px;
     border-radius: 50%;
@@ -48,25 +40,22 @@ body {
     margin-bottom: 15px;
 }
 
+.blog-preview {
+    margin-bottom: 30px;
+    padding: 20px;
+}
+
 .blog-img {
-    width: 250px;
-    margin-right: 20px;
+    width: 100%;
 }
 
 .blog-title {
     font-weight: 600;
     font-size: 25px;
+    margin-top: 20px;
     margin-bottom: 10px;
-}
-
-.blog-details {
-    padding: 20px;
 }
 
 .blog-subtitle {
     margin-top: 15px;
 }
-
-.highlight {
-    background: linear-gradient(180deg,rgba(255,255,255,0) 50%, rgb(174, 206, 255) 50%);
-  }
