--- a/css/blog.css
+++ b/css/blog.css
@@ -25,3 +25,54 @@
     color: grey;
     margin-top: 10px;
 }
+
+.blog-body {
+    font-size: 18px;
+    margin-top: 40px;
+}
+
+.blog-section {
+    margin-bottom: 40px;
+}
+
+.list {
+    margin-top: 15px;
+}
+
+.subheading {
+    font-weight: 600;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.img-wrapper {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.blog-img-content {
+    width: 100%;
+    max-width: 500px;
+}
+
+.caption {
+    color: grey;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+#shoebox-img {
+    width: auto;
+    height: 500px;
+}
+
+.strong-big {
+    font-weight: 700;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.blog-section-grey {
+    padding: 30px;
+    background-color: rgb(235, 235, 235);
+}
