--- a/css/blog.css
+++ b/css/blog.css
@@ -88,6 +88,7 @@
     color: #c7254e;
     border-radius: 4px;
     font-family: 'Courier New', Courier, monospace;
+    display: inline-block;
 }
 
 .very-big {
@@ -133,4 +134,18 @@ blockquote {
 
 .mce_inline_error {
     border-color: red !important;
+}
+
+.toc {
+    border-radius: 5px;
+    border: 1px solid black;
+    padding: 10px;
+    padding-top: 30px;
+    margin-bottom: 40px;
+    background-color: rgb(244, 244, 244);
+}
+
+pre {
+    margin-top: -30px;
+    margin-bottom: -20px;
 }
