--- a/css/blog.css
+++ b/css/blog.css
@@ -149,3 +149,9 @@ pre {
     margin-top: -30px;
     margin-bottom: -20px;
 }
+
+.outline-red {
+    border: 1px solid red;
+    border-radius: 5px;
+    padding: 20px;
+}
