--- a/css/main.css
+++ b/css/main.css
@@ -74,3 +74,12 @@
 .red {
     color: red;
 }
+
+.inline-icon {
+    width: 25px;
+    margin-right: 5px;
+}
+
+.card-link {
+    display: inline-block;
+}
