--- a/css/blog.css
+++ b/css/blog.css
@@ -156,3 +156,8 @@ pre {
 .readmore-wrapper {
     margin-bottom: 100px;
 }
+
+hr {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+}
